# ros1_lifecycle

./: CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: ubuntu_18_04.yml  ubuntu_20_04.yml
lifecycle/: CMakeLists.txt  README.md  package.xml
lifecycle/examples/: example_lifecycle_client.cpp  example_lifecycle_manager.cpp  example_managed_node.cpp
lifecycle/examples/launch/: managed_node_client.launch
lifecycle/include/lifecycle/: broadcaster.h  client.h  lifecycle_model.h  managed_node.h  manager.h
lifecycle/scripts/: change_lifecycle.py
lifecycle/src/lifecycle/: broadcaster.cpp  client.cpp  lifecycle_model.cpp  managed_node.cpp  manager.cpp
lifecycle/test/: test_lifecycle.cpp  test_lifecycle.launch  test_lifecycle_client.cpp  test_lifecycle_client.launch
lifecycle_msgs/: CMakeLists.txt  package.xml
lifecycle_msgs/action/: Lifecycle.action
lifecycle_msgs/msg/: Lifecycle.msg  lm_events.msg
lifecycle_python/: CMakeLists.txt  README.md  package.xml  setup.py
lifecycle_python/scripts/: change_lifecycle.py
lifecycle_python/src/lifecycle/: __init__.py  broadcaster.py  client.py  lifecycle_model.py  managed_node.py  manager.py
lifecycle_python/test/: test_lifecycle_client.launch  test_lifecycle_client.py  test_manager.launch  test_manager.py
lifecycle_test_library/: CMakeLists.txt  README.md  package.xml  setup.py
lifecycle_test_library/examples/config/: example_test.yaml
lifecycle_test_library/examples/launch/: lifecycle_test.launch
lifecycle_test_library/examples/managed_node_example/: managed_node_example.py
lifecycle_test_library/scripts/: lifecycle_node_test.py
lifecycle_test_library/src/lifecycle_test_library/: lifecycle_test_library.py
lifecycle_test_library/srv/: AddTwoInts.srv
lm_monitor/: CMakeLists.txt  README.md  package.xml  setup.py
lm_monitor/scripts/: echo
lm_monitor/src/lm_monitor/: listener.py  monitor.py
lm_monitor/test/: test_lm_monitor.launch  test_lm_monitor.py
mode_manager/: .gitignore  CMakeLists.txt  package.xml
mode_manager/docs/: configuration.md  design.md
mode_manager/examples/config/: example_modes.yaml
mode_manager/examples/launch/: kinect.launch  mode_manager.launch  set_param_to_arg.launch
mode_manager/scripts/: change_mode.py
mode_manager/src/: check_config.py  manager_node.py
mode_manager/src/mode_manager/: __init__.py  component_control.py  config_action.py  config_lifecycle.py  config_message.py  manager.py
mode_manager/test/: test_controller.py  test_message_config_action.py  test_ros_support.py
mode_msgs/: CMakeLists.txt  package.xml
mode_msgs/action/: ModeChange.action
mode_msgs/msg/: Mode.msg
mode_msgs/srv/: ListModes.srv
